<resources>
    <string name="app_name">GADS  Mobile Application</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="plural_sight_logo">Plural Sight Logo</string>
    <string name="back">Back</string>
    <string name="user_details">User Details</string>
    <string name="username">Username</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission Not Successful</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_on_github_link">Project on Github (link)</string>
    <string name="email_address">Email Address</string>
    <string name="hours"> %1$s leaning hours %2$s </string>

</resources>