<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/submission_app_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_full">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/up_arrow"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:contentDescription="@string/back"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_baseline_backspace" />

        <ImageView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:adjustViewBounds="true"
            android:alpha=".25"
            android:contentDescription="@string/plural_sight_logo"
            android:paddingEnd="10dp"
            android:paddingRight="35dp"
            android:paddingStart="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/gads_1"
            android:text="@string/app_name" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/project_submission_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:gravity="center_horizontal"
                android:text="@string/project_submission"
                android:textAlignment="center"
                android:textColor="#FF9800"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/gradient_underline"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/project_submission_tittle"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:src="@drawable/gradient_line"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/project_submission_tittle" />

            <LinearLayout
                android:id="@+id/names_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gradient_underline"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gradient_underline">

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/first_name"
                    android:padding="10dp"
                    android:textColor="@color/grey"
                    android:textColorHint="#000" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/last_name"
                    android:padding="10dp"
                    android:textColor="@color/grey"
                    android:textColorHint="#000" />

            </LinearLayout>


            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/names_layout"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/email_address"
                android:padding="10dp"
                android:textColor="@color/grey"
                android:textColorHint="#000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/names_layout" />

            <EditText
                android:id="@+id/git_hub_project_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_address"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/project_on_github_link"
                android:padding="10dp"
                android:textColor="@color/grey"
                android:textColorHint="#000"
                app:layout_constraintBottom_toTopOf="@+id/project_submit_btn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_address" />


            <Button
                android:id="@+id/project_submit_btn"
                android:layout_width="154dp"
                android:layout_height="45dp"
                android:layout_below="@+id/git_hub_project_link"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rounded_button"
                android:paddingStart="40dp"
                android:paddingLeft="40dp"
                android:paddingEnd="40dp"
                android:paddingRight="40dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>

